    by flags, where value 1 keeps the same meaning as in hwloc 2.x.
  + PCI domains are now always 32bits.
  + The "programming interface" of PCI devices is now exposed
    in PCI object attributes.
  + The OS device "type" attribute is now a bitmask.
    - "Block" OS devices are now "Storage" (for actual Block devices)
      or "Memory" (for Linux DAX and CXL devices, etc).
  + The "Backend" info attribute of OS devices is now in the topology
    root object together with other backends.
  + The array and count of info attributes are now embedded in the new
    struct hwloc_infos_s.
    - hwloc_infos_s structures may be modified with hwloc_modify_infos().
    - hwloc_topology_get_infos() returns the new topology-global array
      of info attributes.
      . Several info attributes previously stored in the root object are
        now topology attributes (e.g. information about hwloc, about the
        discovery, operating system information returned by uname).
        See "Custom string infos" in the documentation for details.
    - hwloc_cpukinds_get_info() and hwloc_cpukinds_register() now manipulate
      infos as such a structure.
* Tools
  + lstopo has a new --osf option to tune the displaying of object
    attributes and units.
* Removed features
  + Netloc.
  + Importing and exporting from/to hwloc 1.x XML.
  + BlueGene/Q support.
  + Functions that were deprecated since 2.0:
    - hwloc_topology_insert_misc_object_by_parent()
    - hwloc_obj_cpuset_snprintf()
    - hwloc_obj_type_sscanf()
    - hwloc_cpuset_to_nodeset_strict()
    - hwloc_cpuset_from_nodeset_strict()
  + HWLOC_PCI_<domain>_<bus>_LOCALCPUS environment variables,
    superseded with a single HWLOC_PCI_LOCALITY since 2.0.
* Misc
  + hwloc_topology_allow() is now possible on shmem-adopted topology.
    This allows to share a topology between processes in different
    Linux cgroups, etc.
  + XML format switches to 3.0 by default. Exporting to 2.x is