@@ -33,6 +33,7 @@ Version 3.0.0
   + The OS device "type" attribute is now a bitmask.
     - "Block" OS devices are now "Storage" (for actual Block devices)
       or "Memory" (for Linux DAX and CXL devices, etc).
+    - BXI interfaces are now "Network" instead of "OpenFabrics".
   + The "Backend" info attribute of OS devices is now in the topology
     root object together with other backends.
   + The array and count of info attributes are now embedded in the new
